# fastget

./: .gitignore  CMakeLists.txt  README.md
src/: chunk_manager.cpp  chunk_manager.hpp  downloader.cpp  downloader.hpp  file_writer.cpp  file_writer.hpp  main.cpp  network.cpp  network.hpp  resume_state.cpp  resume_state.hpp  ui.cpp  ui.hpp  verifier.cpp  verifier.hpp
